bindings/c/whiteout_m2.h

typedef struct whiteout_M2DistanceFadeData whiteout_M2DistanceFadeData;
typedef struct whiteout_M2DetailedLightData whiteout_M2DetailedLightData;
typedef struct whiteout_M2DebugOcclusionData whiteout_M2DebugOcclusionData;
typedef struct whiteout_M2TexturedLightData whiteout_M2TexturedLightData;
typedef struct whiteout_M2PivotDisplacementData whiteout_M2PivotDisplacementData;
/* ── M2DistanceFadeData ─────────────────────────────────────────────── */

whiteout_M2DistanceFadeData* whiteout_m2_M2DistanceFadeData_new(void);
void whiteout_m2_M2DistanceFadeData_delete(whiteout_M2DistanceFadeData* self);
float whiteout_m2_M2DistanceFadeData_get_squaredFarDist(const whiteout_M2DistanceFadeData* self);
void whiteout_m2_M2DistanceFadeData_set_squaredFarDist(whiteout_M2DistanceFadeData* self, float value);
float whiteout_m2_M2DistanceFadeData_get_squaredNearDist(const whiteout_M2DistanceFadeData* self);
void whiteout_m2_M2DistanceFadeData_set_squaredNearDist(whiteout_M2DistanceFadeData* self, float value);
size_t whiteout_m2_M2DistanceFadeData_reserved_size(void);
uint32_t whiteout_m2_M2DistanceFadeData_get_reserved_at(const whiteout_M2DistanceFadeData* self, size_t index);
void whiteout_m2_M2DistanceFadeData_set_reserved_at(whiteout_M2DistanceFadeData* self, size_t index, uint32_t value);
/* ── M2DetailedLightData ─────────────────────────────────────────────── */

whiteout_M2DetailedLightData* whiteout_m2_M2DetailedLightData_new(void);
void whiteout_m2_M2DetailedLightData_delete(whiteout_M2DetailedLightData* self);
uint16_t whiteout_m2_M2DetailedLightData_get_flags(const whiteout_M2DetailedLightData* self);
void whiteout_m2_M2DetailedLightData_set_flags(whiteout_M2DetailedLightData* self, uint16_t value);
uint16_t whiteout_m2_M2DetailedLightData_get_unknown0(const whiteout_M2DetailedLightData* self);
void whiteout_m2_M2DetailedLightData_set_unknown0(whiteout_M2DetailedLightData* self, uint16_t value);
uint32_t whiteout_m2_M2DetailedLightData_get_unknown1(const whiteout_M2DetailedLightData* self);
void whiteout_m2_M2DetailedLightData_set_unknown1(whiteout_M2DetailedLightData* self, uint32_t value);
/* ── M2DebugOcclusionData ─────────────────────────────────────────────── */

whiteout_M2DebugOcclusionData* whiteout_m2_M2DebugOcclusionData_new(void);
void whiteout_m2_M2DebugOcclusionData_delete(whiteout_M2DebugOcclusionData* self);
float whiteout_m2_M2DebugOcclusionData_get_unknown1_1(const whiteout_M2DebugOcclusionData* self);
void whiteout_m2_M2DebugOcclusionData_set_unknown1_1(whiteout_M2DebugOcclusionData* self, float value);
float whiteout_m2_M2DebugOcclusionData_get_unknown1_2(const whiteout_M2DebugOcclusionData* self);
void whiteout_m2_M2DebugOcclusionData_set_unknown1_2(whiteout_M2DebugOcclusionData* self, float value);
uint32_t whiteout_m2_M2DebugOcclusionData_get_unknown1_3(const whiteout_M2DebugOcclusionData* self);
void whiteout_m2_M2DebugOcclusionData_set_unknown1_3(whiteout_M2DebugOcclusionData* self, uint32_t value);
uint32_t whiteout_m2_M2DebugOcclusionData_get_unknown1_4(const whiteout_M2DebugOcclusionData* self);
void whiteout_m2_M2DebugOcclusionData_set_unknown1_4(whiteout_M2DebugOcclusionData* self, uint32_t value);
/* ── M2TexturedLightData ─────────────────────────────────────────────── */

whiteout_M2TexturedLightData* whiteout_m2_M2TexturedLightData_new(void);
void whiteout_m2_M2TexturedLightData_delete(whiteout_M2TexturedLightData* self);
float whiteout_m2_M2TexturedLightData_get_unknown0(const whiteout_M2TexturedLightData* self);
void whiteout_m2_M2TexturedLightData_set_unknown0(whiteout_M2TexturedLightData* self, float value);
float whiteout_m2_M2TexturedLightData_get_unknown1(const whiteout_M2TexturedLightData* self);
void whiteout_m2_M2TexturedLightData_set_unknown1(whiteout_M2TexturedLightData* self, float value);
int32_t whiteout_m2_M2TexturedLightData_get_textureLookup(const whiteout_M2TexturedLightData* self);
void whiteout_m2_M2TexturedLightData_set_textureLookup(whiteout_M2TexturedLightData* self, int32_t value);
int32_t whiteout_m2_M2TexturedLightData_get_unknown2(const whiteout_M2TexturedLightData* self);
void whiteout_m2_M2TexturedLightData_set_unknown2(whiteout_M2TexturedLightData* self, int32_t value);
/* ── M2PivotDisplacementData ─────────────────────────────────────────────── */

/* One DPIV (pivot displacement) record, 32 bytes. */
/*  */
/* The client keeps the payload pointer and a record count of `chunkSize / 32`, so a chunk holds N of these — the corpus has both 1- and 2-record chunks. */
whiteout_M2PivotDisplacementData* whiteout_m2_M2PivotDisplacementData_new(void);
void whiteout_m2_M2PivotDisplacementData_delete(whiteout_M2PivotDisplacementData* self);
/* small displacement; Z varies most */
whiteout_Vector3f* whiteout_m2_M2PivotDisplacementData_get_offset(whiteout_M2PivotDisplacementData* self);
void whiteout_m2_M2PivotDisplacementData_set_offset(whiteout_M2PivotDisplacementData* self, const whiteout_Vector3f* value);
/* 0 or 1 */
uint32_t whiteout_m2_M2PivotDisplacementData_get_flags(const whiteout_M2PivotDisplacementData* self);
void whiteout_m2_M2PivotDisplacementData_set_flags(whiteout_M2PivotDisplacementData* self, uint32_t value);
/* always 0 */
size_t whiteout_m2_M2PivotDisplacementData_reserved_size(void);
uint32_t whiteout_m2_M2PivotDisplacementData_get_reserved_at(const whiteout_M2PivotDisplacementData* self, size_t index);
void whiteout_m2_M2PivotDisplacementData_set_reserved_at(whiteout_M2PivotDisplacementData* self, size_t index, uint32_t value);