bindings/java/src/main/java/whiteout/m2/internal/Native.java


    // -- M2DistanceFadeData --
    public static final MethodHandle whiteout_m2_M2DistanceFadeData_new = find(
        "whiteout_m2_M2DistanceFadeData_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DistanceFadeData_delete = find(
        "whiteout_m2_M2DistanceFadeData_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DistanceFadeData_get_squaredFarDist = find("whiteout_m2_M2DistanceFadeData_get_squaredFarDist", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DistanceFadeData_set_squaredFarDist = find("whiteout_m2_M2DistanceFadeData_set_squaredFarDist", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2DistanceFadeData_get_squaredNearDist = find("whiteout_m2_M2DistanceFadeData_get_squaredNearDist", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DistanceFadeData_set_squaredNearDist = find("whiteout_m2_M2DistanceFadeData_set_squaredNearDist", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2DistanceFadeData_reserved_size = find("whiteout_m2_M2DistanceFadeData_reserved_size", FunctionDescriptor.of(ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2DistanceFadeData_get_reserved_at = find("whiteout_m2_M2DistanceFadeData_get_reserved_at", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2DistanceFadeData_set_reserved_at = find("whiteout_m2_M2DistanceFadeData_set_reserved_at", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT));

    // -- M2DetailedLightData --
    public static final MethodHandle whiteout_m2_M2DetailedLightData_new = find(
        "whiteout_m2_M2DetailedLightData_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DetailedLightData_delete = find(
        "whiteout_m2_M2DetailedLightData_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DetailedLightData_get_flags = find("whiteout_m2_M2DetailedLightData_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DetailedLightData_set_flags = find("whiteout_m2_M2DetailedLightData_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2DetailedLightData_get_unknown0 = find("whiteout_m2_M2DetailedLightData_get_unknown0", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DetailedLightData_set_unknown0 = find("whiteout_m2_M2DetailedLightData_set_unknown0", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2DetailedLightData_get_unknown1 = find("whiteout_m2_M2DetailedLightData_get_unknown1", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DetailedLightData_set_unknown1 = find("whiteout_m2_M2DetailedLightData_set_unknown1", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- M2DebugOcclusionData --
    public static final MethodHandle whiteout_m2_M2DebugOcclusionData_new = find(
        "whiteout_m2_M2DebugOcclusionData_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DebugOcclusionData_delete = find(
        "whiteout_m2_M2DebugOcclusionData_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DebugOcclusionData_get_unknown1_1 = find("whiteout_m2_M2DebugOcclusionData_get_unknown1_1", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DebugOcclusionData_set_unknown1_1 = find("whiteout_m2_M2DebugOcclusionData_set_unknown1_1", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2DebugOcclusionData_get_unknown1_2 = find("whiteout_m2_M2DebugOcclusionData_get_unknown1_2", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DebugOcclusionData_set_unknown1_2 = find("whiteout_m2_M2DebugOcclusionData_set_unknown1_2", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2DebugOcclusionData_get_unknown1_3 = find("whiteout_m2_M2DebugOcclusionData_get_unknown1_3", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DebugOcclusionData_set_unknown1_3 = find("whiteout_m2_M2DebugOcclusionData_set_unknown1_3", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2DebugOcclusionData_get_unknown1_4 = find("whiteout_m2_M2DebugOcclusionData_get_unknown1_4", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2DebugOcclusionData_set_unknown1_4 = find("whiteout_m2_M2DebugOcclusionData_set_unknown1_4", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- M2TexturedLightData --
    public static final MethodHandle whiteout_m2_M2TexturedLightData_new = find(
        "whiteout_m2_M2TexturedLightData_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TexturedLightData_delete = find(
        "whiteout_m2_M2TexturedLightData_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TexturedLightData_get_unknown0 = find("whiteout_m2_M2TexturedLightData_get_unknown0", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TexturedLightData_set_unknown0 = find("whiteout_m2_M2TexturedLightData_set_unknown0", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2TexturedLightData_get_unknown1 = find("whiteout_m2_M2TexturedLightData_get_unknown1", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TexturedLightData_set_unknown1 = find("whiteout_m2_M2TexturedLightData_set_unknown1", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_m2_M2TexturedLightData_get_textureLookup = find("whiteout_m2_M2TexturedLightData_get_textureLookup", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TexturedLightData_set_textureLookup = find("whiteout_m2_M2TexturedLightData_set_textureLookup", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2TexturedLightData_get_unknown2 = find("whiteout_m2_M2TexturedLightData_get_unknown2", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2TexturedLightData_set_unknown2 = find("whiteout_m2_M2TexturedLightData_set_unknown2", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- M2PivotDisplacementData --
    public static final MethodHandle whiteout_m2_M2PivotDisplacementData_new = find(
        "whiteout_m2_M2PivotDisplacementData_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PivotDisplacementData_delete = find(
        "whiteout_m2_M2PivotDisplacementData_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PivotDisplacementData_get_offset = find("whiteout_m2_M2PivotDisplacementData_get_offset", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PivotDisplacementData_set_offset = find("whiteout_m2_M2PivotDisplacementData_set_offset", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PivotDisplacementData_get_flags = find("whiteout_m2_M2PivotDisplacementData_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2PivotDisplacementData_set_flags = find("whiteout_m2_M2PivotDisplacementData_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_m2_M2PivotDisplacementData_reserved_size = find("whiteout_m2_M2PivotDisplacementData_reserved_size", FunctionDescriptor.of(ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2PivotDisplacementData_get_reserved_at = find("whiteout_m2_M2PivotDisplacementData_get_reserved_at", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_m2_M2PivotDisplacementData_set_reserved_at = find("whiteout_m2_M2PivotDisplacementData_set_reserved_at", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT));
